Splitting codebase into layers

--- a/CustomerDetails.API/appsettings.json
+++ b/CustomerDetails.API/appsettings.json
@@ -5,6 +5,9 @@
   "ServiceURL": {
     "UIAvatar": "https://ui-avatars.com/"
   },
+  "UIAvatar": {
+    "BaseUrl": "https://ui-avatars.com/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
